tests/negative/unterminated_string.glyph
module neg

fn main() -> number {
  const s = "oops
  return 0
}
